@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-04-15T03:33:57Z",
+  "timestamp" : "2024-04-15T16:22:12Z",
   "count_outdated" : 736,
   "uniques_outdated" : 356,
-  "count" : 737,
-  "uniques" : 357,
+  "count" : 738,
+  "uniques" : 358,
   "clones" : [
     {
       "timestamp": "2024-04-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
