@@ -1,3 +1,12 @@
+2024-04-15T16:22:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8692599170 # 185
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 356 736 / 357 737
+* notice: next accum: outdated-unq outdated-all / unq all: 356 736 / 358 738
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-04-15]
+
 2024-04-15T03:33:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8682894241 # 183
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
